deploy/k8gb-discovery/k8gb-discovery-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8gb-discovery
  namespace: k8gb-discovery
  labels:
    app: k8gb-discovery
spec:
  replicas: 2
  selector:
    matchLabels:
      app: k8gb-discovery
  template:
    metadata:
      labels:
        app: k8gb-discovery
    spec:
      restartPolicy: Always
      containers:
        - name: k8gb-discovery
          image: k8gb-discovery:0.0.1
          imagePullPolicy: Always
